Adding Template Driven without FORM  validation

--- a/src/app/parent/parent.component.html
+++ b/src/app/parent/parent.component.html
@@ -52,3 +52,9 @@
   </mat-card-content>
 </mat-card>
 <!-- <app-children2></app-children2> -->
+<h1>Lets Look How Angular Forms Work</h1>
+<mat-card routerLink="/template-driven-form" class="tdForm">
+  <mat-card-header>
+    <h1>Go to Template Driven Form</h1>
+  </mat-card-header>
+</mat-card>
