--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -14,7 +14,7 @@
     // margin-top:10%;
   }
   .logo {
-    background-image: url("../../assets/psthejohn.png");
+    // background-image: url("../../assets/psthejohn.png");
     background-size:cover;
     width: 100px;
     height: 100px;
